# PyRealEstate

./: README.md  ReadME.md  pypi_description.md  pyproject.toml  requirements.txt  setup.cfg
pyRealEstate/: Pre_Processing.py  RealEstateMetrics.py  Time_Trending.py
