[metadata]
name = pyRealEstate
version = 0.2.0
author = Joshua Jorgensen
description = package to assist with data analytics in real estate
long_description = file: pypi_description.md
long_description_content_type = text/markdown
url = https://github.com/Joshua-Data-Wizard/PyRealEstate/tree/main
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = scikit-learn
                    numpy
                    pandas
                    statsmodels
                    matplotlib
                    seaborn
                    lightgbm
                    scipy
packages = find: 
python_requires = >=3.6
include_package_data = True
